# greentic-start

./: .dockerignore  .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  Dockerfile.distroless  README.md  SECURITY.md  SECURITY_FIX_REPORT.md  all-code-scanning-alerts.json  codex-prompt.txt  coverage-policy.json  pr-changed-files.txt  pr-code-scanning-filtered.json  pr-comment.md  pr-vulnerable-changes.json  security-alerts.json
.codex/: PR-DOCTOR-01-doctor-commands.md  PR-ST-01-static-md  global_rules.md  repo_overview.md
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  codex-security-fix.yml  crates-publish.yml  dev-publish.yml  distroless.yml  perf.yml  publish.yml  release-binaries.yml
.i18n/: translator-state.json
benches/: perf.rs
ci/: local_check.sh  package_binstall.sh  prepare_publish_workspace.sh
docs/: coding-agents.md  ownership.md
docs/proposals/: 2026-04-23-webchat-gateway-hardening.md
docs/superpowers/plans/: 2026-04-11-oauth-card-full-roundtrip.md  2026-04-11-oauth-card-messaging-wiring.md  2026-04-23-webchat-gateway-hardening.md  2026-05-01-webchat-ws-redis-backplane.md
docs/superpowers/specs/: 2026-04-11-oauth-card-full-roundtrip-design.md  2026-04-11-oauth-card-messaging-wiring-design.md  2026-05-01-webchat-ws-redis-backplane-design.md
i18n/: en.json
i18n/operator_cli/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
src/: admin_certs.rs  admin_server.rs  bin_resolver.rs  bundle_config.rs  bundle_ref.rs  capabilities.rs  cards.rs  cli_args.rs  cloudflared.rs  component_qa_ops.rs  config.rs  demo_qa_bridge.rs  dependency_resolver.rs  dev_store_path.rs  directline.rs  discovery.rs  doctor.rs  domains.rs  event_router.rs  extension_pack.rs  flow_log.rs  http_ingress.rs  http_routes.rs  ingress_dispatch.rs  ingress_types.rs  lib.rs  main.rs  messaging_app.rs  messaging_dto.rs  messaging_egress.rs  ngrok.rs  oauth_callback.rs  oauth_envelope.rs  oauth_session_store.rs  operator_i18n.rs  operator_log.rs  pack_card_rewrites.rs  passphrase_unlock.rs  perf_harness.rs  port_utils.rs  (+31 more)
src/gmap/: edit.rs  eval.rs  mod.rs  parse.rs
src/http_ingress/: admin_relay.rs  conv_dedup.rs  directline_handler.rs  directline_session.rs  helpers.rs  legacy_directline.rs  legacy_directline_handler.rs  messaging.rs  mod.rs  static_handler.rs
src/http_ingress/websocket/: mod.rs  protocol.rs  pump.rs  session.rs  upgrade.rs
src/ingress/: control_directive.rs  mod.rs
src/notifier/: config.rs  memory.rs  mod.rs  redis.rs
src/offers/: registry.rs
src/onboard/: api.rs  mod.rs  provider_i18n.rs  providers.rs  webhook_setup.rs  wizard.rs
src/runner_host/: dispatch.rs  helpers.rs  hooks.rs  mod.rs  token_validation.rs  types.rs
src/services/: components.rs  mod.rs  nats.rs  runner.rs
src/subscriptions_universal/: demo.rs  mod.rs  scheduler.rs  service.rs  store.rs
tests/: notifier_redis.rs  perf_scaling.rs  perf_timeout.rs  webchat_websocket.rs
tools/: i18n.sh
updates/2026-04-25/: greentic-start.md
