[package]
name = "greentic-start"
version = "0.6.0"
edition = "2024"
rust-version = "1.95"
description = "Greentic lifecycle runner for start/restart/stop orchestration"
license = "MIT"
repository = "https://github.com/greenticai/greentic-start"
homepage = "https://github.com/greenticai/greentic-start"
readme = "README.md"
keywords = ["greentic", "cli", "lifecycle", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

[[bench]]
name = "perf"
harness = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6"
flate2 = "1"
hmac = "0.13"
greentic-distributor-client = { version = "0.5", default-features = false, features = ["pack-fetch"] }
greentic-setup = { version = "0.5" }
greentic-runner-desktop = { version = "0.5" }
greentic-runner-host = { version = "0.5" }
greentic-secrets-lib = { version = "0.5", features = ["providers-dev"] }
greentic-secrets-cli = "0.6"
greentic-secrets-passphrase = "0.6"
greentic-types = { version = "0.5", features = ["serde"] }
secrecy = { version = "0.10", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc", "getrandom"] }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
include_dir = "0.7"
jsonschema = "0.45"
libc = "0.2"
once_cell = "1.21"
open = "5"
qa-spec = { version = ">=0.5.0, <0.6.0" }
rand = "0.10"
rpassword = "7"
rustls = "0.23"
rustls-pemfile = "2"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml_bw = { package = "serde_yaml_gtc", version = "2.5.2" }
sys-locale = "0.3"
sysinfo = "0.38"
sha2 = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "net"] }
tokio-rustls = "0.26"
tar = "0.4"
tracing = "0.1"
unic-langid = "0.9"
ureq = { version = "3", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
zip = "8"
zstd = "0.13"

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

# TEMPORARY: while greentic-secrets v0.6.0 + greentic-setup v0.6.0 are
# awaiting publish, point at the local clones. Remove this entire
# [patch.crates-io] block before merging this PR.
[patch.crates-io]
# greentic-secrets v0.6 introduces passphrase + cli helper crates as
# additive new packages (no conflict with v0.5 of secrets-lib that
# greentic-runner-host still consumes). Point at the local clone while
# the upstream PR awaits publish; remove this block before merging.
greentic-secrets-passphrase = { path = "../greentic-secrets/crates/greentic-secrets-passphrase" }
greentic-secrets-cli = { path = "../greentic-secrets/crates/greentic-secrets-cli" }
