bench = [
    { name = "perf", harness = false },
]

[package]
name = "greentic-start"
version = "0.6.0-dev.0"
edition = "2024"
rust-version = "1.95"
description = "Greentic lifecycle runner for start/restart/stop orchestration"
license = "MIT"
repository = "https://github.com/greenticai/greentic-start"
homepage = "https://github.com/greenticai/greentic-start"
readme = "README.md"
keywords = [
    "greentic",
    "cli",
    "lifecycle",
    "orchestration",
]
categories = [
    "command-line-utilities",
    "development-tools",
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
dashmap = "6"
flate2 = "1"
futures-util = "0.3"
hmac = "0.13"
http-body-util = "0.1"
hyper-tungstenite = "0.16"
hyper-util = "0.1"
include_dir = "0.7"
jsonschema = "0.45"
libc = "0.2"
once_cell = "1.21"
open = "5"
rand = "0.10"
rpassword = "7"
rustls = "0.23"
rustls-pemfile = "2"
semver = "1"
serde_cbor = "0.11"
serde_json = "1.0"
sys-locale = "0.3"
sysinfo = "0.38"
sha2 = "0.11"
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
tar = "0.4"
thiserror = "2"
tracing = "0.1"
unic-langid = "0.9"
urlencoding = "2"
zip = "8"
zstd = "0.13"

[dependencies.clap]
version = "4.5"
features = [
    "derive",
]

[dependencies.greentic-distributor-client]
version = ">=0.6.0-dev, <0.7.0-0"
default-features = false
features = [
    "pack-fetch",
]

[dependencies.greentic-setup]
version = ">=0.6.0-dev, <0.7.0-0"

[dependencies.greentic-runner-desktop]
version = ">=0.6.0-dev, <0.7.0-0"

[dependencies.greentic-runner-host]
version = ">=0.6.0-dev, <0.7.0-0"

[dependencies.greentic-secrets-lib]
version = ">=0.6.0-dev, <0.7.0-0"
features = [
    "providers-dev",
]

[dependencies.greentic-types]
version = ">=0.6.0-dev, <0.7.0-0"
features = [
    "serde",
]

[dependencies.hyper]
version = "1"
features = [
    "full",
]

[dependencies.qa-spec]
version = ">=0.6.0-dev, <0.7.0-0"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.serde_yaml_bw]
package = "serde_yaml_gtc"
version = "2.5.2"

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
]

[dependencies.tokio-stream]
version = "0.1"
features = [
    "sync",
]

[dependencies.ureq]
version = "3"
features = [
    "json",
]

[dependencies.uuid]
version = "1"
features = [
    "v4",
]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"
