bench = [
    { name = "perf", harness = false },
]

[package]
name = "greentic-start"
version = "1.1.0-dev.1"
edition = "2024"
rust-version = "1.95"
description = "Greentic lifecycle runner for start/restart/stop orchestration"
license = "MIT"
repository = "https://github.com/greenticai/greentic-start"
homepage = "https://github.com/greenticai/greentic-start"
readme = "README.md"
keywords = [
    "greentic",
    "cli",
    "lifecycle",
    "orchestration",
]
categories = [
    "command-line-utilities",
    "development-tools",
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backhand = "0.25"
base64 = "0.22"
chrono = "0.4"
dashmap = "6"
flate2 = "1"
futures-util = "0.3"
hmac = "0.13"
http-body-util = "0.1"
hyper-tungstenite = "0.20"
hyper-util = "0.1"
include_dir = "0.7"
jsonschema = "0.46"
libc = "0.2"
once_cell = "1.21"
open = "5"
rand = "0.10"
rpassword = "7"
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
rustls = "0.23"
rustls-pemfile = "2"
semver = "1"
serde_cbor = "0.11"
serde_json = "1.0"
sys-locale = "0.3"
sysinfo = "0.39"
sha2 = "0.11"
tokio-rustls = "0.26"
tokio-tungstenite = "0.29"
tar = "0.4"
thiserror = "2"
tracing = "0.1"
unic-langid = "0.9"
urlencoding = "2"
wasmtime = { version = "43", default-features = false, features = ["component-model", "cranelift", "runtime"] }
zip = "8"
zstd = "0.13"

[dependencies.clap]
version = "4.5"
features = [
    "derive",
]

[dependencies.greentic-distributor-client]
version = ">=1.1.0-dev, <1.2.0-0"
default-features = false
features = [
    "pack-fetch",
]

[dependencies.greentic-deployer]
version = ">=1.1.0-dev, <1.2.0-0"
default-features = false

[dependencies.greentic-deploy-spec]
version = ">=0.1, <0.2"

[dependencies.greentic-setup]
version = ">=1.1.0-dev, <1.2.0-0"

[dependencies.greentic-runner-desktop]
version = ">=1.1.0-dev, <1.2.0-0"

[dependencies.greentic-runner-host]
version = ">=1.1.0-dev, <1.2.0-0"

[dependencies.greentic-secrets-lib]
version = ">=1.1.0-dev, <1.2.0-0"
features = [
    "providers-dev",
]

[dependencies.greentic-types]
version = ">=1.1.0-dev, <1.2.0-0"
features = [
    "serde",
]

[dependencies.hyper]
version = "1"
features = [
    "full",
]

[dependencies.qa-spec]
version = ">=1.1.0-dev, <1.2.0-0"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.serde_yaml_bw]
package = "serde_yaml_gtc"
version = "2.5.2"

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
]

[dependencies.tokio-stream]
version = "0.1"
features = [
    "sync",
]

[dependencies.ureq]
version = "3"
features = [
    "json",
]

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "serde",
]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"
